# Python_scripts

./: .gitignore  guid.py  move_file.py
check_file_size/: main.py  pyproject.toml
check_log/: main.py  pyproject.toml
