[tool.poetry]
name = "check-log"
version = "0.1.0"
description = ""
authors = ["Ihar <kostyuchik22@gmail.com>"]
readme = "README.md"
packages = [{include = "check_log"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
